// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WSelect > renders properly 1`] = `
<anonymous-stub
  appendtobody="false"
  autocomplete="off"
  calculateposition="[Function]"
  class="language-selector"
  clearable="false"
  clearsearchonblur="[Function]"
  clearsearchonselect="true"
  closeonselect="true"
  components="[object Object]"
  createoption="[Function]"
  deselectfromdropdown="false"
  dir="auto"
  disabled="false"
  dropdownshouldopen="[Function]"
  filter="[Function]"
  filterable="false"
  filterby="[Function]"
  getoptionkey="[Function]"
  getoptionlabel="[Function]"
  label="label"
  mapkeydown="[Function]"
  modelvalue="[object Object]"
  multiple="false"
  nodrop="false"
  options="[object Object],[object Object]"
  placeholder=""
  pushtags="false"
  reduce="[Function]"
  resetonoptionschange="false"
  searchable="false"
  searchinputqueryselector="[type=search]"
  selectable="[Function]"
  selectonkeycodes="13"
  selectontab="false"
  taggable="false"
  transition="dropdown"
  uid="1"
/>
`;

exports[`WSelect > renders properly an icon when provided 1`] = `
<anonymous-stub
  appendtobody="false"
  autocomplete="off"
  calculateposition="[Function]"
  class="language-selector"
  clearable="false"
  clearsearchonblur="[Function]"
  clearsearchonselect="true"
  closeonselect="true"
  components="[object Object]"
  createoption="[Function]"
  deselectfromdropdown="false"
  dir="auto"
  disabled="false"
  dropdownshouldopen="[Function]"
  filter="[Function]"
  filterable="false"
  filterby="[Function]"
  getoptionkey="[Function]"
  getoptionlabel="[Function]"
  label="label"
  mapkeydown="[Function]"
  modelvalue="[object Object]"
  multiple="false"
  nodrop="false"
  options="[object Object],[object Object]"
  placeholder=""
  pushtags="false"
  reduce="[Function]"
  resetonoptionschange="false"
  searchable="false"
  searchinputqueryselector="[type=search]"
  selectable="[Function]"
  selectonkeycodes="13"
  selectontab="false"
  taggable="false"
  transition="dropdown"
  uid="2"
/>
`;
